# hyppau

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/dependabot/: dependabot.yml
.github/workflows/: integrated_test.yml  unit_test.yml
bats/: test_abcd-400.bats  test_dimensions-200.bats  test_interference-200.bats  test_main.bats  test_network_pair-1000.bats  test_small.bats  test_stuttering_robustness-100.bats
examples/: gen_abcd.awk  small-fjs.expected  small-naive.expected  small-online.expected  small.expected  small.json
examples/dimensions/: gen_dimensions.py  gen_log.awk  run.sh  run_all.sh
examples/interference/: gen_interference.py  gen_log.awk  interference_ab_01.json  run.sh  run_all.sh  run_multiple.sh  small.txt  (+1 more)
src/: automata.rs  automata_runner.rs  dfa.rs  dfa_earliest_pattern_matcher.rs  filtered_hyper_pattern_matching.rs  filtered_pattern_matching_automata_runner.rs  filtered_single_hyper_pattern_matching.rs  fjs_filtered_single_hyper_pattern_matching.rs  fjs_hyper_pattern_matching.rs  fjs_single_hyper_pattern_matching.rs  hyper_pattern_matching.rs  kmp_skip_values.rs  main.rs  matching_filter.rs  multi_stream_reader.rs  naive_hyper_pattern_matching.rs  nfa.rs  nfah.rs  online_filtered_single_hyper_pattern_matching.rs  online_single_hyper_pattern_matching.rs  quick_search_skip_values.rs  reading_scheduler.rs  result_notifier.rs  serialization.rs  shared_buffer.rs  single_hyper_pattern_matching.rs
utils/: .gitignore  README.md  gtime_to_json.sh  json_to_dot.py  logs_to_json.sh  schema.json  stderr_to_json.sh  stdout_to_json.sh
(+18 files in other folders)
