[package]
name = "hyppau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0"
tempfile = "3.6"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
string-interner = "0.14"
smallvec = "1.10"

# For heap profiling
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]  # Enable the dhat crate when dhat-heap is enabled

[profile.release]
debug = true

